@startuml

title __TASK's Class Diagram__\n

  package com.myself.nettychat {
    package com.myself.nettychat.task {
      class MsgAsyncTesk {
          + saveChatMsgTask()
      }
    }
  }
  

  package com.myself.nettychat {
    package com.myself.nettychat.task {
      class ScheduledPool {
          - scheduledExecutorService : ScheduledExecutorService
          + ScheduledPool()
          + submit()
      }
    }
  }
  

  MsgAsyncTesk o-- LikeSomeCacheTemplate : cacheTemplate
  MsgAsyncTesk o-- UserMsgRepository : userMsgRepository
  MsgAsyncTesk o-- UserRepository : userRepository
  ScheduledPool -up-|> Scheduled
  ScheduledPool o-- InitNetty : serverBean


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
